@@ -20,7 +20,7 @@
 
 #include "inet/transportlayer/tcp/queues/TCPByteStreamRcvQueue.h"
 
-#include "inet/common/ByteArrayMessage.h"
+#include "inet/common/RawPacket.h"
 #include "inet/transportlayer/contract/tcp/TCPCommand_m.h"
 #include "inet/transportlayer/tcp_common/TCPSegment.h"
 
